# ------------------------------
# Windows platform
# ------------------------------

platform(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

# ------------------------------
# macOS platforms
# ------------------------------

platform(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

# ------------------------------
# wasm platform
# ------------------------------

platform(
    name = "wasm_wasm32",
    constraint_values = [
        "@platforms//os:emscripten",
        "@platforms//cpu:wasm32",
    ],
)

platform(
    name = "wasm_wasm64",
    constraint_values = [
        "@platforms//os:emscripten",
        "@platforms//cpu:wasm64",
    ],
)
